--- a/learn.html
+++ b/learn.html
@@ -12,7 +12,7 @@
 
     <nav>
         <a href="index.html ">Home</a>
-        <a href="top5.html">Top 5</a>
+        <a href="learn.html">Learn More</a>
         
     </nav>
 
