created fan page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
         <a href="index.html ">Home</a>
         <a href="learn.html">Learn More</a>
+        <a hrel="">My Reality</a>
         
     </nav>
 
@@ -34,6 +35,15 @@
                 <li>Why Hog Hunting Is Important - The Ethical Argument</li>
                 <li>Hog Hunting Methods - How It's Done</li>
                 <li>Myths & Misconceptions - Clear the Air</li>
+            </ul>
+
+            <h4>This Research Is My Reality</h4>
+            <ul>
+                <li>Let's Get Personal - The Truth of My Story</li>
+                <li>Up Close and Real - Encounters That Shaped My Perspective</li>
+                <li>What Research Doesn't Show - The Reality Behind the Words</li>
+                <li>Lessons From the Field - What I Learned Facing Feral Hogs</li>
+                <li>Why This Matters - The True Impact</li>
             </ul>
 			
         </section>
