--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <a href="index.html ">Home</a>
         <a href="learn.html">Learn More</a>
-        <a hrel="">My Reality</a>
+        <a href="reality.html">My Reality</a>
         
     </nav>
 
