--- a/learn.html
+++ b/learn.html
@@ -13,6 +13,7 @@
     <nav>
         <a href="index.html ">Home</a>
         <a href="learn.html">Learn More</a>
+        <a href="reality.html">My Reality</a>
         
     </nav>
 
