--- a/reality.html
+++ b/reality.html
@@ -19,7 +19,7 @@
 
     <main>
         <section>
-            <h2>Welcome to The Feral Truth</h2>
+            <h2>This Research Is My Reality</h2>
             <p>
                 This website explores the growing issue of feral hogs by explaining what they are, where they originated, and why their rapid reproduction and behavior make them a serious invasive species. 
                 It examines the extensive environmental, agricultural, and economic damage caused by feral hogs, emphasizing the widespread impact on ecosystems, farmland, and communities. 
@@ -27,23 +27,40 @@
                 In addition, it provides an overview of common hog hunting and control methods while stressing the importance of safety, legality, and ethical practices. 
                 Finally, the website addresses common myths and misconceptions about feral hogs and hog hunting, using factual information to promote a better understanding of the issue.
             </p>
-			
-            <h3>What You'll Learn Here</h3>
+
+            <h3>Let's Get Personal - The Truth of My Story</h3>
             <ul>
-                <li>About Feral Hogs - Know the Animal</li>
-                <li>Damage Caused by Feral Hogs - The Real Cost</li>
-                <li>Why Hog Hunting Is Important - The Ethical Argument</li>
-                <li>Hog Hunting Methods - How It's Done</li>
-                <li>Myths & Misconceptions - Clear the Air</li>
+                <li>Point 1</li>
+                <li>Point 2</li>
+                <li>Point 3</li>
             </ul>
 
-            <h3>This Research Is My Reality</h3>
+            <h3>Up Close and Real - Encounters That Shaped My Perspective</h3>
             <ul>
-                <li>Let's Get Personal - The Truth of My Story</li>
-                <li>Up Close and Real - Encounters That Shaped My Perspective</li>
-                <li>What Research Doesn't Show - The Reality Behind the Words</li>
-                <li>Lessons From the Field - What I Learned Facing Feral Hogs</li>
-                <li>Why This Matters - The True Impact</li>
+                <li>Point 1</li>
+                <li>Point 2</li>
+                <li>Point 3</li>
+            </ul>
+
+            <h3>What Research Doesn't Show - The Reality Behind the Words</h3>
+            <ul>
+                <li>Point 1</li>
+                <li>Point 2</li>
+                <li>Point 3</li>
+            </ul>
+
+            <h3>Lessons From the Field - What I Learned Facing Feral Hogs</h3>
+            <ul>
+                <li>Point 1</li>
+                <li>Point 2</li>
+                <li>Point 3</li>
+            </ul>
+
+            <h3>Why This Matters - The True Impact</h3>
+            <ul>
+                <li>Point 1</li>
+                <li>Point 2</li>
+                <li>Point 3</li>
             </ul>
 			
         </section>
