--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         <h1>Hog Hunting: The Feral Truth</h1>
     </header>
 
-    <nav>
-        <a href="index.html ">Home</a>
-        <a href="learn.html">Learn More</a>
-        <a href="reality.html">My Reality</a>
-        
-    </nav>
+    <table>
+      <tr>
+        <th><a href="index.html ">Home</a></th>
+        <th><a href="learn.html">Learn More</a></th>
+        <th><a href="reality.html">My Reality</a></th>
+      </tr>
+    </table>
 
     <main>
         <section>
