--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         <h1>Hog Hunting: The Feral Truth</h1>
     </header>
 
+    <style>
+      table, th {
+        width: 100%;
+        border: 5px solid black;
+        border-collapse:collapse
+      }
+    </style>  
+    
     <table>
       <tr>
         <th><a href="index.html ">Home</a></th>
