--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <style>
       table, th {
         width: 100%;
-        border: 5px solid black;
-        border-collapse:collapse
-      }
+        border: 3px solid black;
+        border-collapse:collapse        
+      }        
     </style>  
-    
+
     <table>
+      <cologroup>
+        <col style="width: 33%;">
+        <col style="width: 33%;">
+        <col style="width: 33%;">
+      </cologroup>
       <tr>
         <th><a href="index.html ">Home</a></th>
         <th><a href="learn.html">Learn More</a></th>
