--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
 
     <style>
-      table, th {
+      table, th, th, th {
         width: 100%;
         border: 3px solid black;
         border-collapse:collapse        
@@ -19,11 +19,6 @@
     </style>  
 
     <table>
-      <cologroup>
-        <col style="width: 33%;">
-        <col style="width: 33%;">
-        <col style="width: 33%;">
-      </cologroup>
       <tr>
         <th><a href="index.html ">Home</a></th>
         <th><a href="learn.html">Learn More</a></th>
