--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     </header>
 
     <style>
-      table, th, th, th {
+      table, th {
         width: 100%;
         border: 3px solid black;
         border-collapse:collapse        
       }        
     </style>  
 
-    <table>
+    <table cellspacing="0">
       <tr>
-        <th><a href="index.html ">Home</a></th>
-        <th><a href="learn.html">Learn More</a></th>
-        <th><a href="reality.html">My Reality</a></th>
+        <th width="33%"><a href="index.html ">Home</a></th>
+        <th width="33%"><a href="learn.html">Learn More</a></th>
+        <th width="33%"><a href="reality.html">My Reality</a></th>
       </tr>
     </table>
 
