--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         width: 100%;
         border: 3px solid black;
         border-collapse:collapse        
-      }        
+      }      
+      th {
+        width: 33%;
+        border: 3px solid black
+      }
     </style>  
 
     <table>
