--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         border-collapse:collapse        
       }      
       th {
-        width: 33%;
-        border: 3px solid black
+        border: 3px solid black;
       }
     </style>  
 
