--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
 
     <style>
-      th  {
+      table, th  {
         width: 100%;
         border: 3px solid black;
         border-collapse:collapse        
