--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <style>
       th  {
+        width: 100%;
         border: 3px solid black;
-        border-collapse:collapse        
+        border-collapse:collapse;         
       }      
     </style>  
 
