--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     </header>
 
     <style>
-      th  {
+      table  {
         width: 100%;
+        table-layout: fixed;
         border: 3px solid black;
         border-collapse:collapse;         
       }      
