--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
 
     <style>
-      table  {
+      table th  {
         width: 100%;
         table-layout: fixed;
         border: 3px solid black;
