--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     </header>
 
     <style>
-      table th  {
+      table, th  {
         width: 100%;
         table-layout: fixed;
         border: 3px solid black;
         border-collapse:collapse;         
-      }      
+      }    
+
     </style>  
 
     <table>
