--- a/learn.html
+++ b/learn.html
@@ -40,9 +40,11 @@
 			
             <h3>About Feral Hogs - Know the Animal</h3>
             <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3</li>
+                <li>Origins and Spread: Where feral hogs came from and how they became widespread across the United States.</li>
+                    <li>elaborate</li>
+                <li>Biology and Behavior: Their rapid reproduction rates, intelligence, adaptability, and survival instincts.</li>
+                <li>Why They're Invasive: How their traits allow them to outcompete native wildlife and disrupt ecosystems.</li>
+
             </ul>
 
             <h3>Damage Caused by Feral Hogs - The Real Cost</h3>
