--- a/learn.html
+++ b/learn.html
@@ -41,38 +41,36 @@
             <h3>About Feral Hogs - Know the Animal</h3>
             <ul>
                 <li>Origins and Spread: Where feral hogs came from and how they became widespread across the United States.</li>
-                    <li>elaborate</li>
                 <li>Biology and Behavior: Their rapid reproduction rates, intelligence, adaptability, and survival instincts.</li>
                 <li>Why They're Invasive: How their traits allow them to outcompete native wildlife and disrupt ecosystems.</li>
-
             </ul>
 
             <h3>Damage Caused by Feral Hogs - The Real Cost</h3>
             <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3</li>
+                <li>Environmental Impact: Destruction of native plants, soil erosion, water contamination, and harm to wildlife habitats.</li>
+                <li>Agricultural Losses: Crop destruction, damage to fences and land, and threats to livestock.</li>
+                <li>Economic Consequences: Financial strain on farmers, landowners, and local communities due to repair and control costs.</li>
             </ul>
 
             <h3>Why Hog Hunting Is Important - The Ethical Argument</h3>
             <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3</li>
+                <li>Population Control: Hunting as a necessary tool to manage overpopulation.</li>
+                <li>Protection of Resources: Reducing damage to farmland, ecosystems, and public lands.</li>
+                <li>Responsible Wildlife Management: The role of regulated hunting in conservation efforts.</li>
             </ul>
 
             <h3>Hog Hunting Methods - How It's Done</h3>
             <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3</li>
+                <li>Common Techniques: Trapping, night hunting, use of thermal equipment, and other legal methods.</li>
+                <li>Safety Practices: Proper firearm handling, awareness of surroundings, and hunter education.</li>
+                <li>Legal & Ethical Guidelines: Following state regulations and promoting humane harvesting practices.</li>
             </ul>
 
             <h3>Myths & Misconceptions - Clear the Air</h3>
             <ul>
-                <li>Point 1</li>
-                <li>Point 2</li>
-                <li>Point 3</li>
+                <li>“Hogs Are Native” Myth: Clarifying their non-native status in the U.S.</li>
+                <li>“Hunting Makes the Problem Worse” Claim: Addressing misconceptions about population control.</li>
+                <li>“Feral Hogs Are Basically Farm Animals” Myth: Explaining the difference between domestic pigs and feral hogs, including behavior, ecological impact, and why they are considered invasive wildlife rather than livestock.</li>
             </ul>
 			
         </section>
